Grid remake- pending fixes for html overflow

--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,26 @@
 :root{
     box-sizing: border-box;
+    --primary-color:#7c3aed;
+    --secondary-color:#f5f3ff;
+    --background-color:#ddd6fe;
+
 }
 body{
     display:grid;
     grid-template-columns: 20% 80%;
     grid-template-rows: 20% 80%;
+    background-color: var(--background-color);
+    min-width: 0;
 }
 .header{
     grid-area:1/2/2/3;
     display: grid;
     grid-template-rows: repeat(2,50%);
     grid-template-columns: 100%;
+    background-color: white;
+    /* min-width: 0; */
+    padding:50px;
+
 }
 img{
     width: 100%;
@@ -22,9 +32,20 @@ ul{
     /* margin: 0; */
     padding: 0;
 }
+.nav>ul>li>button{
+    width: 100px;
+    height: 40px;
+    border-radius: 15px;
+    border:0;
+    background-color: var(--primary-color);
+    color: white;
+}
 .dashboard-menu{
     grid-area: 1/1/3/2;
-    margin: 0 auto;
+    /* margin: 0 auto; */
+    text-align: center;
+    background-color: var(--primary-color);
+    color: white;
 }
 main{
     grid-area:2/2/3/3;
@@ -73,16 +94,21 @@ main{
     display: grid;
     grid-template-columns: 70% 30%;
     grid-template-rows: 50% 50%;
-    gap:50px;
+    /* gap:50px; */
 }
 .projects{
     grid-area:1/1/3/2;
+    padding:25px;
 }
 .announcements{
     grid-area: 1/2/2/3;
+    /* min-width: 0; */
+
 }
 .trending{
     grid-area: 2/2/3/3;
+    /* min-width: 0; */
+
 }
 .project-button{
     display: flex;
@@ -91,7 +117,7 @@ main{
 .project-content{
     display: grid;
     grid-template-columns: repeat(2,50%);
-    gap:15px
+    /* gap:15px */
 }
 .project-button>img{
     max-width: 36px;
